--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,36 +1,36 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b6bdce">  <td>23/09/05 13:11:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTest.VerifyFilterDropDown()[pri:0, instance:com.saucelab.Testcases.ProductPageTest@10a98392]">VerifyFilterDropDown</td> 
-  <td>main@1241128308</td>   <td></td> </tr>
-<tr bgcolor="bbfcb4">  <td>23/09/05 13:11:32</td>   <td>-845</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageTitle()[pri:0, instance:com.saucelab.Testcases.LoginTest@51ab1ee3]">VerifyPageTitle</td> 
-  <td>main@1241128308</td>   <td></td> </tr>
-<tr bgcolor="60bcab">  <td>23/09/05 13:11:35</td>   <td>2123</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucelab.Testcases.LoginTest@51ab1ee3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1241128308</td>   <td></td> </tr>
-<tr bgcolor="86919f">  <td>23/09/05 13:11:33</td>   <td>216</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YourCartPageTest.shoppingCartTest()[pri:0, instance:com.saucelab.Testcases.YourCartPageTest@30839e44]">shoppingCartTest</td> 
-  <td>main@1241128308</td>   <td></td> </tr>
-<tr bgcolor="bbfcb4">  <td>23/09/05 13:11:32</td>   <td>-834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Login()[pri:1, instance:com.saucelab.Testcases.LoginTest@51ab1ee3]">Login</td> 
-  <td>main@1241128308</td>   <td></td> </tr>
-<tr bgcolor="60bcab">  <td>23/09/05 13:11:32</td>   <td>-1051</td> <td title="&gt;&gt;BaseClass.ApplicationSetup()[pri:0, instance:com.saucelab.Testcases.LoginTest@51ab1ee3]">&gt;&gt;ApplicationSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1241128308</td>   <td></td> </tr>
-<tr bgcolor="b6bdce">  <td>23/09/05 13:11:33</td>   <td>72</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTest.verifyURL()[pri:0, instance:com.saucelab.Testcases.ProductPageTest@10a98392]">verifyURL</td> 
-  <td>main@1241128308</td>   <td></td> </tr>
-<tr bgcolor="b6bdce">  <td>23/09/05 13:11:33</td>   <td>78</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTest.AddItemToCartTest()[pri:1, instance:com.saucelab.Testcases.ProductPageTest@10a98392]">AddItemToCartTest</td> 
-  <td>main@1241128308</td>   <td></td> </tr>
-<tr bgcolor="bbfcb4">  <td>23/09/05 13:11:32</td>   <td>-839</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageURL()[pri:0, instance:com.saucelab.Testcases.LoginTest@51ab1ee3]">VerifyPageURL</td> 
-  <td>main@1241128308</td>   <td></td> </tr>
-<tr bgcolor="bbfcb4">  <td>23/09/05 13:11:32</td>   <td>-907</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyLabels()[pri:0, instance:com.saucelab.Testcases.LoginTest@51ab1ee3]">VerifyLabels</td> 
-  <td>main@1241128308</td>   <td></td> </tr>
-<tr bgcolor="9286a7">  <td>23/09/05 13:11:34</td>   <td>627</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutInformationPageTest.yourinformationTest()[pri:0, instance:com.saucelab.Testcases.CheckoutInformationPageTest@7fb53256]">yourinformationTest</td> 
-  <td>main@1241128308</td>   <td></td> </tr>
-<tr bgcolor="bbfcb4">  <td>23/09/05 13:11:32</td>   <td>-864</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageLogo()[pri:0, instance:com.saucelab.Testcases.LoginTest@51ab1ee3]">VerifyPageLogo</td> 
-  <td>main@1241128308</td>   <td></td> </tr>
-<tr bgcolor="8f779f">  <td>23/09/05 13:11:35</td>   <td>1840</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinishPageTest.FinishTest()[pri:0, instance:com.saucelab.Testcases.FinishPageTest@2f894ad9]">FinishTest</td> 
-  <td>main@1241128308</td>   <td></td> </tr>
-<tr bgcolor="9286a7">  <td>23/09/05 13:11:34</td>   <td>591</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutInformationPageTest.verifylabels()[pri:0, instance:com.saucelab.Testcases.CheckoutInformationPageTest@7fb53256]">verifylabels</td> 
-  <td>main@1241128308</td>   <td></td> </tr>
-<tr bgcolor="86919f">  <td>23/09/05 13:11:34</td>   <td>585</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YourCartPageTest.verifyPageURL()[pri:0, instance:com.saucelab.Testcases.YourCartPageTest@30839e44]">verifyPageURL</td> 
-  <td>main@1241128308</td>   <td></td> </tr>
-<tr bgcolor="9c6abb">  <td>23/09/05 13:11:34</td>   <td>1110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OverViewPageTest.OverviewTest()[pri:0, instance:com.saucelab.Testcases.OverViewPageTest@27329d2a]">OverviewTest</td> 
-  <td>main@1241128308</td>   <td></td> </tr>
+<tr bgcolor="b2747e">  <td>23/09/05 16:47:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageURL()[pri:0, instance:com.saucelab.Testcases.LoginTest@40113163]">VerifyPageURL</td> 
+  <td>main@83554564</td>   <td></td> </tr>
+<tr bgcolor="b9cb99">  <td>23/09/05 16:47:04</td>   <td>1818</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutInformationPageTest.verifylabels()[pri:0, instance:com.saucelab.Testcases.CheckoutInformationPageTest@7df28f1]">verifylabels</td> 
+  <td>main@83554564</td>   <td></td> </tr>
+<tr bgcolor="faba70">  <td>23/09/05 16:47:05</td>   <td>3091</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinishPageTest.FinishTest()[pri:0, instance:com.saucelab.Testcases.FinishPageTest@321ca237]">FinishTest</td> 
+  <td>main@83554564</td>   <td></td> </tr>
+<tr bgcolor="b2747e">  <td>23/09/05 16:47:02</td>   <td>-34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageLogo()[pri:0, instance:com.saucelab.Testcases.LoginTest@40113163]">VerifyPageLogo</td> 
+  <td>main@83554564</td>   <td></td> </tr>
+<tr bgcolor="9095bc">  <td>23/09/05 16:47:04</td>   <td>2361</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OverViewPageTest.OverviewTest()[pri:0, instance:com.saucelab.Testcases.OverViewPageTest@318c68d5]">OverviewTest</td> 
+  <td>main@83554564</td>   <td></td> </tr>
+<tr bgcolor="60bcab">  <td>23/09/05 16:47:02</td>   <td>-222</td> <td title="&gt;&gt;BaseClass.ApplicationSetup()[pri:0, instance:com.saucelab.Testcases.LoginTest@40113163]">&gt;&gt;ApplicationSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@83554564</td>   <td></td> </tr>
+<tr bgcolor="b2747e">  <td>23/09/05 16:47:02</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageTitle()[pri:0, instance:com.saucelab.Testcases.LoginTest@40113163]">VerifyPageTitle</td> 
+  <td>main@83554564</td>   <td></td> </tr>
+<tr bgcolor="b2747e">  <td>23/09/05 16:47:02</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Login()[pri:1, instance:com.saucelab.Testcases.LoginTest@40113163]">Login</td> 
+  <td>main@83554564</td>   <td></td> </tr>
+<tr bgcolor="d8ff7d">  <td>23/09/05 16:47:03</td>   <td>973</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTest.AddItemToCartTest()[pri:1, instance:com.saucelab.Testcases.ProductPageTest@78d9f51b]">AddItemToCartTest</td> 
+  <td>main@83554564</td>   <td></td> </tr>
+<tr bgcolor="b9cb99">  <td>23/09/05 16:47:04</td>   <td>1860</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutInformationPageTest.yourinformationTest()[pri:0, instance:com.saucelab.Testcases.CheckoutInformationPageTest@7df28f1]">yourinformationTest</td> 
+  <td>main@83554564</td>   <td></td> </tr>
+<tr bgcolor="e9bc9e">  <td>23/09/05 16:47:04</td>   <td>1417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YourCartPageTest.shoppingCartTest()[pri:0, instance:com.saucelab.Testcases.YourCartPageTest@23ed382c]">shoppingCartTest</td> 
+  <td>main@83554564</td>   <td></td> </tr>
+<tr bgcolor="e9bc9e">  <td>23/09/05 16:47:04</td>   <td>1809</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YourCartPageTest.verifyPageURL()[pri:0, instance:com.saucelab.Testcases.YourCartPageTest@23ed382c]">verifyPageURL</td> 
+  <td>main@83554564</td>   <td></td> </tr>
+<tr bgcolor="d8ff7d">  <td>23/09/05 16:47:03</td>   <td>965</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTest.verifyURL()[pri:0, instance:com.saucelab.Testcases.ProductPageTest@78d9f51b]">verifyURL</td> 
+  <td>main@83554564</td>   <td></td> </tr>
+<tr bgcolor="d8ff7d">  <td>23/09/05 16:47:03</td>   <td>888</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTest.VerifyFilterDropDown()[pri:0, instance:com.saucelab.Testcases.ProductPageTest@78d9f51b]">VerifyFilterDropDown</td> 
+  <td>main@83554564</td>   <td></td> </tr>
+<tr bgcolor="60bcab">  <td>23/09/05 16:47:05</td>   <td>3212</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucelab.Testcases.LoginTest@40113163]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@83554564</td>   <td></td> </tr>
+<tr bgcolor="b2747e">  <td>23/09/05 16:47:02</td>   <td>-82</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyLabels()[pri:0, instance:com.saucelab.Testcases.LoginTest@40113163]">VerifyLabels</td> 
+  <td>main@83554564</td>   <td></td> </tr>
 </table>
