--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,36 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d8ff7d">  <td>23/09/05 16:47:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTest.AddItemToCartTest()[pri:1, instance:com.saucelab.Testcases.ProductPageTest@78d9f51b]">AddItemToCartTest</td> 
-  <td>main@83554564</td>   <td></td> </tr>
-<tr bgcolor="60bcab">  <td>23/09/05 16:47:02</td>   <td>-1195</td> <td title="&gt;&gt;BaseClass.ApplicationSetup()[pri:0, instance:com.saucelab.Testcases.LoginTest@40113163]">&gt;&gt;ApplicationSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@83554564</td>   <td></td> </tr>
-<tr bgcolor="faba70">  <td>23/09/05 16:47:05</td>   <td>2118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FinishPageTest.FinishTest()[pri:0, instance:com.saucelab.Testcases.FinishPageTest@321ca237]">FinishTest</td> 
-  <td>main@83554564</td>   <td></td> </tr>
-<tr bgcolor="b2747e">  <td>23/09/05 16:47:02</td>   <td>-965</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Login()[pri:1, instance:com.saucelab.Testcases.LoginTest@40113163]">Login</td> 
-  <td>main@83554564</td>   <td></td> </tr>
-<tr bgcolor="9095bc">  <td>23/09/05 16:47:04</td>   <td>1388</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OverViewPageTest.OverviewTest()[pri:0, instance:com.saucelab.Testcases.OverViewPageTest@318c68d5]">OverviewTest</td> 
-  <td>main@83554564</td>   <td></td> </tr>
-<tr bgcolor="d8ff7d">  <td>23/09/05 16:47:03</td>   <td>-85</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTest.VerifyFilterDropDown()[pri:0, instance:com.saucelab.Testcases.ProductPageTest@78d9f51b]">VerifyFilterDropDown</td> 
-  <td>main@83554564</td>   <td></td> </tr>
-<tr bgcolor="b2747e">  <td>23/09/05 16:47:02</td>   <td>-1055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyLabels()[pri:0, instance:com.saucelab.Testcases.LoginTest@40113163]">VerifyLabels</td> 
-  <td>main@83554564</td>   <td></td> </tr>
-<tr bgcolor="b2747e">  <td>23/09/05 16:47:02</td>   <td>-1007</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageLogo()[pri:0, instance:com.saucelab.Testcases.LoginTest@40113163]">VerifyPageLogo</td> 
-  <td>main@83554564</td>   <td></td> </tr>
-<tr bgcolor="b2747e">  <td>23/09/05 16:47:02</td>   <td>-983</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageTitle()[pri:0, instance:com.saucelab.Testcases.LoginTest@40113163]">VerifyPageTitle</td> 
-  <td>main@83554564</td>   <td></td> </tr>
-<tr bgcolor="b2747e">  <td>23/09/05 16:47:02</td>   <td>-973</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageURL()[pri:0, instance:com.saucelab.Testcases.LoginTest@40113163]">VerifyPageURL</td> 
-  <td>main@83554564</td>   <td></td> </tr>
-<tr bgcolor="e9bc9e">  <td>23/09/05 16:47:04</td>   <td>444</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YourCartPageTest.shoppingCartTest()[pri:0, instance:com.saucelab.Testcases.YourCartPageTest@23ed382c]">shoppingCartTest</td> 
-  <td>main@83554564</td>   <td></td> </tr>
-<tr bgcolor="60bcab">  <td>23/09/05 16:47:05</td>   <td>2239</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucelab.Testcases.LoginTest@40113163]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@83554564</td>   <td></td> </tr>
-<tr bgcolor="e9bc9e">  <td>23/09/05 16:47:04</td>   <td>836</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YourCartPageTest.verifyPageURL()[pri:0, instance:com.saucelab.Testcases.YourCartPageTest@23ed382c]">verifyPageURL</td> 
-  <td>main@83554564</td>   <td></td> </tr>
-<tr bgcolor="d8ff7d">  <td>23/09/05 16:47:03</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTest.verifyURL()[pri:0, instance:com.saucelab.Testcases.ProductPageTest@78d9f51b]">verifyURL</td> 
-  <td>main@83554564</td>   <td></td> </tr>
-<tr bgcolor="b9cb99">  <td>23/09/05 16:47:04</td>   <td>845</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutInformationPageTest.verifylabels()[pri:0, instance:com.saucelab.Testcases.CheckoutInformationPageTest@7df28f1]">verifylabels</td> 
-  <td>main@83554564</td>   <td></td> </tr>
-<tr bgcolor="b9cb99">  <td>23/09/05 16:47:04</td>   <td>887</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutInformationPageTest.yourinformationTest()[pri:0, instance:com.saucelab.Testcases.CheckoutInformationPageTest@7df28f1]">yourinformationTest</td> 
-  <td>main@83554564</td>   <td></td> </tr>
+<tr bgcolor="b1b49b">  <td>23/09/05 18:05:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTest.AddItemToCartTest()[pri:1, instance:com.saucelab.Testcases.ProductPageTest@59a79443]">AddItemToCartTest</td> 
+  <td>main@1109258131</td>   <td></td> </tr>
+<tr bgcolor="c799b1">  <td>23/09/05 18:03:55</td>   <td>-82052</td> <td title="&gt;&gt;BaseClass.ApplicationSetup()[pri:0, instance:com.saucelab.Testcases.LoginTest@340d6d89]">&gt;&gt;ApplicationSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1109258131</td>   <td></td> </tr>
+<tr bgcolor="fcf36f">  <td>23/09/05 18:04:56</td>   <td>-20160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Login_01()[pri:1, instance:com.saucelab.Testcases.LoginTest@340d6d89]">Login_01</td> 
+  <td>main@1109258131</td>   <td></td> </tr>
+<tr bgcolor="fcf36f">  <td>23/09/05 18:03:55</td>   <td>-81914</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Login_02()[pri:0, instance:com.saucelab.Testcases.LoginTest@340d6d89]">Login_02</td> 
+  <td>main@1109258131</td>   <td></td> </tr>
+<tr bgcolor="fcf36f">  <td>23/09/05 18:03:55</td>   <td>-81738</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Login_03()[pri:0, instance:com.saucelab.Testcases.LoginTest@340d6d89]">Login_03</td> 
+  <td>main@1109258131</td>   <td></td> </tr>
+<tr bgcolor="b1b49b">  <td>23/09/05 18:05:16</td>   <td>-95</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTest.VerifyFilterDropDown()[pri:0, instance:com.saucelab.Testcases.ProductPageTest@59a79443]">VerifyFilterDropDown</td> 
+  <td>main@1109258131</td>   <td></td> </tr>
+<tr bgcolor="fcf36f">  <td>23/09/05 18:04:16</td>   <td>-60286</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyLabels()[pri:0, instance:com.saucelab.Testcases.LoginTest@340d6d89]">VerifyLabels</td> 
+  <td>main@1109258131</td>   <td></td> </tr>
+<tr bgcolor="fcf36f">  <td>23/09/05 18:04:36</td>   <td>-40219</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageLogo()[pri:0, instance:com.saucelab.Testcases.LoginTest@340d6d89]">VerifyPageLogo</td> 
+  <td>main@1109258131</td>   <td></td> </tr>
+<tr bgcolor="fcf36f">  <td>23/09/05 18:04:56</td>   <td>-20175</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageTitle()[pri:0, instance:com.saucelab.Testcases.LoginTest@340d6d89]">VerifyPageTitle</td> 
+  <td>main@1109258131</td>   <td></td> </tr>
+<tr bgcolor="fcf36f">  <td>23/09/05 18:04:56</td>   <td>-20170</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageURL()[pri:0, instance:com.saucelab.Testcases.LoginTest@340d6d89]">VerifyPageURL</td> 
+  <td>main@1109258131</td>   <td></td> </tr>
+<tr bgcolor="b1b49b">  <td>23/09/05 18:05:17</td>   <td>-22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTest.pricetagTest()[pri:0, instance:com.saucelab.Testcases.ProductPageTest@59a79443]">pricetagTest</td> 
+  <td>main@1109258131</td>   <td></td> </tr>
+<tr bgcolor="c799b1">  <td>23/09/05 18:05:37</td>   <td>20164</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucelab.Testcases.LoginTest@340d6d89]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1109258131</td>   <td></td> </tr>
+<tr bgcolor="b1b49b">  <td>23/09/05 18:05:17</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTest.verifyURL()[pri:0, instance:com.saucelab.Testcases.ProductPageTest@59a79443]">verifyURL</td> 
+  <td>main@1109258131</td>   <td></td> </tr>
 </table>
