--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,30 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fcf36f">  <td>23/09/05 18:03:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Login_03()[pri:0, instance:com.saucelab.Testcases.LoginTest@340d6d89]">Login_03</td> 
-  <td>main@1109258131</td>   <td></td> </tr>
-<tr bgcolor="b1b49b">  <td>23/09/05 18:05:17</td>   <td>81716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTest.pricetagTest()[pri:0, instance:com.saucelab.Testcases.ProductPageTest@59a79443]">pricetagTest</td> 
-  <td>main@1109258131</td>   <td></td> </tr>
-<tr bgcolor="fcf36f">  <td>23/09/05 18:04:16</td>   <td>21452</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyLabels()[pri:0, instance:com.saucelab.Testcases.LoginTest@340d6d89]">VerifyLabels</td> 
-  <td>main@1109258131</td>   <td></td> </tr>
-<tr bgcolor="fcf36f">  <td>23/09/05 18:04:36</td>   <td>41519</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageLogo()[pri:0, instance:com.saucelab.Testcases.LoginTest@340d6d89]">VerifyPageLogo</td> 
-  <td>main@1109258131</td>   <td></td> </tr>
-<tr bgcolor="fcf36f">  <td>23/09/05 18:04:56</td>   <td>61563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageTitle()[pri:0, instance:com.saucelab.Testcases.LoginTest@340d6d89]">VerifyPageTitle</td> 
-  <td>main@1109258131</td>   <td></td> </tr>
-<tr bgcolor="b1b49b">  <td>23/09/05 18:05:17</td>   <td>81738</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTest.AddItemToCartTest()[pri:1, instance:com.saucelab.Testcases.ProductPageTest@59a79443]">AddItemToCartTest</td> 
-  <td>main@1109258131</td>   <td></td> </tr>
-<tr bgcolor="b1b49b">  <td>23/09/05 18:05:16</td>   <td>81643</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTest.VerifyFilterDropDown()[pri:0, instance:com.saucelab.Testcases.ProductPageTest@59a79443]">VerifyFilterDropDown</td> 
-  <td>main@1109258131</td>   <td></td> </tr>
-<tr bgcolor="c799b1">  <td>23/09/05 18:03:55</td>   <td>-314</td> <td title="&gt;&gt;BaseClass.ApplicationSetup()[pri:0, instance:com.saucelab.Testcases.LoginTest@340d6d89]">&gt;&gt;ApplicationSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1109258131</td>   <td></td> </tr>
-<tr bgcolor="fcf36f">  <td>23/09/05 18:04:56</td>   <td>61568</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageURL()[pri:0, instance:com.saucelab.Testcases.LoginTest@340d6d89]">VerifyPageURL</td> 
-  <td>main@1109258131</td>   <td></td> </tr>
-<tr bgcolor="c799b1">  <td>23/09/05 18:05:37</td>   <td>101902</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucelab.Testcases.LoginTest@340d6d89]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1109258131</td>   <td></td> </tr>
-<tr bgcolor="b1b49b">  <td>23/09/05 18:05:17</td>   <td>81731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTest.verifyURL()[pri:0, instance:com.saucelab.Testcases.ProductPageTest@59a79443]">verifyURL</td> 
-  <td>main@1109258131</td>   <td></td> </tr>
-<tr bgcolor="fcf36f">  <td>23/09/05 18:04:56</td>   <td>61578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Login_01()[pri:1, instance:com.saucelab.Testcases.LoginTest@340d6d89]">Login_01</td> 
-  <td>main@1109258131</td>   <td></td> </tr>
-<tr bgcolor="fcf36f">  <td>23/09/05 18:03:55</td>   <td>-176</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Login_02()[pri:0, instance:com.saucelab.Testcases.LoginTest@340d6d89]">Login_02</td> 
-  <td>main@1109258131</td>   <td></td> </tr>
+<tr bgcolor="fcf36f">  <td>23/09/05 23:30:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Login_03()[pri:-1, instance:com.saucelab.Testcases.LoginTest@15c487a8]">Login_03</td> 
+  <td>main@1600061360</td>   <td></td> </tr>
+<tr bgcolor="9d86fb">  <td>23/09/05 23:30:21</td>   <td>-358</td> <td title="&gt;&gt;BaseClass.ApplicationSetup()[pri:0, instance:com.saucelab.Testcases.LoginTest@15c487a8]">&gt;&gt;ApplicationSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1600061360</td>   <td></td> </tr>
+<tr bgcolor="fcf36f">  <td>23/09/05 23:30:29</td>   <td>7841</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyLabels()[pri:0, instance:com.saucelab.Testcases.LoginTest@15c487a8]">VerifyLabels</td> 
+  <td>main@1600061360</td>   <td></td> </tr>
+<tr bgcolor="fcf36f">  <td>23/09/05 23:30:29</td>   <td>7863</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageURL()[pri:0, instance:com.saucelab.Testcases.LoginTest@15c487a8]">VerifyPageURL</td> 
+  <td>main@1600061360</td>   <td></td> </tr>
+<tr bgcolor="fcf36f">  <td>23/09/05 23:30:29</td>   <td>7854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageLogo()[pri:0, instance:com.saucelab.Testcases.LoginTest@15c487a8]">VerifyPageLogo</td> 
+  <td>main@1600061360</td>   <td></td> </tr>
+<tr bgcolor="fcf36f">  <td>23/09/05 23:30:21</td>   <td>-215</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Login_02()[pri:-2, instance:com.saucelab.Testcases.LoginTest@15c487a8]">Login_02</td> 
+  <td>main@1600061360</td>   <td></td> </tr>
+<tr bgcolor="9d86fb">  <td>23/09/05 23:30:29</td>   <td>7891</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucelab.Testcases.LoginTest@15c487a8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1600061360</td>   <td></td> </tr>
+<tr bgcolor="fcf36f">  <td>23/09/05 23:30:29</td>   <td>7859</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageTitle()[pri:0, instance:com.saucelab.Testcases.LoginTest@15c487a8]">VerifyPageTitle</td> 
+  <td>main@1600061360</td>   <td></td> </tr>
 </table>
