--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fcf36f">  <td>23/09/05 23:57:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListTest.AddItemToCartTest()[pri:1, instance:com.saucelab.Testcases.ProductListTest@7c011174]">AddItemToCartTest</td> 
-  <td>main@878493504</td>   <td></td> </tr>
-<tr bgcolor="9d86fb">  <td>23/09/05 23:57:28</td>   <td>20419</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucelab.Testcases.ProductListTest@7c011174]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@878493504</td>   <td></td> </tr>
-<tr bgcolor="fcf36f">  <td>23/09/05 23:57:07</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListTest.verifyURL()[pri:0, instance:com.saucelab.Testcases.ProductListTest@7c011174]">verifyURL</td> 
-  <td>main@878493504</td>   <td></td> </tr>
-<tr bgcolor="fcf36f">  <td>23/09/05 23:57:07</td>   <td>-261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListTest.VerifyFilterDropDown()[pri:0, instance:com.saucelab.Testcases.ProductListTest@7c011174]">VerifyFilterDropDown</td> 
-  <td>main@878493504</td>   <td></td> </tr>
-<tr bgcolor="9d86fb">  <td>23/09/05 23:57:06</td>   <td>-1284</td> <td title="&gt;&gt;BaseClass.ApplicationSetup()[pri:0, instance:com.saucelab.Testcases.ProductListTest@7c011174]">&gt;&gt;ApplicationSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@878493504</td>   <td></td> </tr>
-<tr bgcolor="fcf36f">  <td>23/09/05 23:57:06</td>   <td>-1156</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductListTest.Teststart()[pri:0, instance:com.saucelab.Testcases.ProductListTest@7c011174]">&gt;&gt;Teststart</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@878493504</td>   <td></td> </tr>
-<tr bgcolor="fcf36f">  <td>23/09/05 23:57:07</td>   <td>-27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListTest.pricetagTest()[pri:0, instance:com.saucelab.Testcases.ProductListTest@7c011174]">pricetagTest</td> 
-  <td>main@878493504</td>   <td></td> </tr>
+<tr bgcolor="fcf36f">  <td>23/09/06 13:00:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OverViewPageTest.testSetup()[pri:0, instance:com.saucelab.Testcases.OverViewPageTest@41da3aee]">&gt;&gt;testSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@724128993</td>   <td></td> </tr>
+<tr bgcolor="9d86fb">  <td>23/09/06 13:00:03</td>   <td>2081</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucelab.Testcases.OverViewPageTest@41da3aee]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@724128993</td>   <td></td> </tr>
+<tr bgcolor="fcf36f">  <td>23/09/06 13:00:02</td>   <td>1633</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OverViewPageTest.cancelCheckout()[pri:-1, instance:com.saucelab.Testcases.OverViewPageTest@41da3aee]">cancelCheckout</td> 
+  <td>main@724128993</td>   <td></td> </tr>
+<tr bgcolor="9d86fb">  <td>23/09/06 13:00:00</td>   <td>-138</td> <td title="&gt;&gt;BaseClass.ApplicationSetup()[pri:0, instance:com.saucelab.Testcases.OverViewPageTest@41da3aee]">&gt;&gt;ApplicationSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@724128993</td>   <td></td> </tr>
+<tr bgcolor="fcf36f">  <td>23/09/06 13:00:03</td>   <td>1950</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OverViewPageTest.OverviewTest()[pri:0, instance:com.saucelab.Testcases.OverViewPageTest@41da3aee]">OverviewTest</td> 
+  <td>main@724128993</td>   <td></td> </tr>
 </table>
