--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,20 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fcf36f">  <td>23/09/05 23:30:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Login_03()[pri:-1, instance:com.saucelab.Testcases.LoginTest@15c487a8]">Login_03</td> 
-  <td>main@1600061360</td>   <td></td> </tr>
-<tr bgcolor="9d86fb">  <td>23/09/05 23:30:21</td>   <td>-358</td> <td title="&gt;&gt;BaseClass.ApplicationSetup()[pri:0, instance:com.saucelab.Testcases.LoginTest@15c487a8]">&gt;&gt;ApplicationSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1600061360</td>   <td></td> </tr>
-<tr bgcolor="fcf36f">  <td>23/09/05 23:30:29</td>   <td>7841</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyLabels()[pri:0, instance:com.saucelab.Testcases.LoginTest@15c487a8]">VerifyLabels</td> 
-  <td>main@1600061360</td>   <td></td> </tr>
-<tr bgcolor="fcf36f">  <td>23/09/05 23:30:29</td>   <td>7863</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageURL()[pri:0, instance:com.saucelab.Testcases.LoginTest@15c487a8]">VerifyPageURL</td> 
-  <td>main@1600061360</td>   <td></td> </tr>
-<tr bgcolor="fcf36f">  <td>23/09/05 23:30:29</td>   <td>7854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageLogo()[pri:0, instance:com.saucelab.Testcases.LoginTest@15c487a8]">VerifyPageLogo</td> 
-  <td>main@1600061360</td>   <td></td> </tr>
-<tr bgcolor="fcf36f">  <td>23/09/05 23:30:21</td>   <td>-215</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Login_02()[pri:-2, instance:com.saucelab.Testcases.LoginTest@15c487a8]">Login_02</td> 
-  <td>main@1600061360</td>   <td></td> </tr>
-<tr bgcolor="9d86fb">  <td>23/09/05 23:30:29</td>   <td>7891</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucelab.Testcases.LoginTest@15c487a8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1600061360</td>   <td></td> </tr>
-<tr bgcolor="fcf36f">  <td>23/09/05 23:30:29</td>   <td>7859</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageTitle()[pri:0, instance:com.saucelab.Testcases.LoginTest@15c487a8]">VerifyPageTitle</td> 
-  <td>main@1600061360</td>   <td></td> </tr>
+<tr bgcolor="7c72e3">  <td>24/01/02 18:55:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageURL()[pri:0, instance:com.saucelab.Testcases.LoginTest@59a79443]">VerifyPageURL</td> 
+  <td>main@543028700</td>   <td></td> </tr>
+<tr bgcolor="bebef3">  <td>24/01/02 18:55:37</td>   <td>3574</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CheckoutInformationPageTest.testSetup()[pri:0, instance:com.saucelab.Testcases.CheckoutInformationPageTest@40230eb9]">&gt;&gt;testSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@543028700</td>   <td></td> </tr>
+<tr bgcolor="7c72e3">  <td>24/01/02 18:55:34</td>   <td>-26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageLogo()[pri:0, instance:com.saucelab.Testcases.LoginTest@59a79443]">VerifyPageLogo</td> 
+  <td>main@543028700</td>   <td></td> </tr>
+<tr bgcolor="7c72e3">  <td>24/01/02 18:55:34</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Login_01()[pri:1, instance:com.saucelab.Testcases.LoginTest@59a79443]">Login_01</td> 
+  <td>main@543028700</td>   <td></td> </tr>
+<tr bgcolor="7c72e3">  <td>24/01/02 18:55:34</td>   <td>-278</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.TestStart()[pri:0, instance:com.saucelab.Testcases.LoginTest@59a79443]">&gt;&gt;TestStart</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@543028700</td>   <td></td> </tr>
+<tr bgcolor="60bcab">  <td>24/01/02 18:55:37</td>   <td>3635</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucelab.Testcases.LoginTest@59a79443]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@543028700</td>   <td></td> </tr>
+<tr bgcolor="7c72e3">  <td>24/01/02 18:55:34</td>   <td>-259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Login_02()[pri:-2, instance:com.saucelab.Testcases.LoginTest@59a79443]">Login_02</td> 
+  <td>main@543028700</td>   <td></td> </tr>
+<tr bgcolor="f5b764">  <td>24/01/02 18:55:37</td>   <td>3583</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OverViewPageTest.testSetup()[pri:0, instance:com.saucelab.Testcases.OverViewPageTest@3976ebfa]">&gt;&gt;testSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@543028700</td>   <td></td> </tr>
+<tr bgcolor="ac9f6f">  <td>24/01/02 18:55:37</td>   <td>3559</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;YourCartPageTest.testSetup()[pri:0, instance:com.saucelab.Testcases.YourCartPageTest@4e83a98]">&gt;&gt;testSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@543028700</td>   <td></td> </tr>
+<tr bgcolor="7c72e3">  <td>24/01/02 18:55:34</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyPageTitle()[pri:0, instance:com.saucelab.Testcases.LoginTest@59a79443]">VerifyPageTitle</td> 
+  <td>main@543028700</td>   <td></td> </tr>
+<tr bgcolor="60bcab">  <td>24/01/02 18:55:33</td>   <td>-415</td> <td title="&gt;&gt;BaseClass.ApplicationSetup()[pri:0, instance:com.saucelab.Testcases.LoginTest@59a79443]">&gt;&gt;ApplicationSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@543028700</td>   <td></td> </tr>
+<tr bgcolor="cefd84">  <td>24/01/02 18:55:37</td>   <td>3591</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FinishPageTest.testSetup()[pri:0, instance:com.saucelab.Testcases.FinishPageTest@31142d58]">&gt;&gt;testSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@543028700</td>   <td></td> </tr>
+<tr bgcolor="7c72e3">  <td>24/01/02 18:55:34</td>   <td>-69</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.VerifyLabels()[pri:0, instance:com.saucelab.Testcases.LoginTest@59a79443]">VerifyLabels</td> 
+  <td>main@543028700</td>   <td></td> </tr>
+<tr bgcolor="eb65e3">  <td>24/01/02 18:55:34</td>   <td>604</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductPageTest.teststart()[pri:0, instance:com.saucelab.Testcases.ProductPageTest@36baa049]">&gt;&gt;teststart</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@543028700</td>   <td></td> </tr>
 </table>
