--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,1 +1,7 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>Login_02Completed succesfully</td></tr>
+<tr><td>VerifyLabelsCompleted succesfully</td></tr>
+<tr><td>VerifyPageLogoCompleted succesfully</td></tr>
+<tr><td>VerifyPageTitleCompleted succesfully</td></tr>
+<tr><td>VerifyPageURLCompleted succesfully</td></tr>
+<tr><td>Login_01Completed succesfully</td></tr>
+</table>
